# FXPP-TESTING

./: DEPLOYMENT_INSTRUCTIONS.md  GITHUB_SETUP.md  PACKAGE_SUMMARY.md  PRICE_TRACKING_SETUP.md  QUICK_START.md  README.md  RENDER_FIX.md  SETUP_INSTRUCTIONS.md  TELEGRAM_SETUP_GUIDE.md  database_test.py  dependencies.txt  install.bat  install_deps.sh  main (entry, stats & telegram).py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt
